# RELECE

./: .flake8  .gitignore  LICENSE  LICENSE.txt  README.md  emission.ipynb  emission.py  pyproject.toml  tensors.py
config/: params.toml
relativistic_ece/: main.py  ray_refraction.py  refraction_visualization.py  utils.py
relece/: __init__.py  absorption.py  cold_plasma.py  distribution.py  distribution_visualization.py  distributions.py  emission.py  main.py  maxwellian.py  maxwellian_eps_h.py  plasma.py  plasma_engine.py  ray_refraction.py  refraction_visualization.py  refractive_index.f90  utils.py
relece/tests/: test_ray_refraction.py  test_refraction.py
src/: absorption.py  main.py  nr.py  physics_engine.py  utils.py
tests/: test_maxwellian.py  test_ray_refraction.py  test_refraction.py
