[project]
name = "relativistic-ece"
version = "0.1.0"
maintainers = [
    {name = "Isaac Goodman", email="isaacdg@stanford.edu"},
]
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["relece"]
addopts = [
    "--import-mode=importlib",
]