[project]
name = "relativistic-ece"
version = "0.1.0"
authors = [
    {name = "Isaac Goodman", email="isaacdg@stanford.edu"},
]
readme = "README.md"
requires-python = ">= 3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relece"]

[tool.pytest.ini_options]
testpaths = ["relece"]
addopts = [
    "--import-mode=importlib",
]
